--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,12 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
-
 aboutPage: true
 
-markdown: kramdown
+markdown: redcarpet
 highlighter: rouge
 
-plugins: [jekyll-paginate]
-paginate: 20
-domain_name: 'http://yourblog-domain.com'
+domain_name: "http://[HOSTNAME]"
 google_analytics: 'UA-XXXXXXXX-X'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
-
-# Details for the RSS feed generator
-url:            'http://your-blog-url.example.com'
-author:         'Your Name'
-authorTwitter:  'YourTwitterUsername'
-
-permalink:       /:year/:title/
 
 defaults:
     -
